Maps first implementation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script 
+      async 
+      defer 
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVrefNsezt-pZ3UPTdlsL3U7GJZ1NMexQ"
+      type="text/javascript"></script>
     <title>light-bubble.app</title>
   </head>
   <body>
